--- a/mobile/SPINet/.gitignore
+++ b/mobile/SPINet/.gitignore
@@ -1,43 +1,22 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# React Native / Expo
 node_modules/
-
-# Expo
 .expo/
+.expo-shared/
 dist/
 web-build/
-expo-env.d.ts
+android/
+ios/
+build/
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# VSCode
+.vscode/
 
-# Metro
-.metro-health-check*
+# Cache and logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
+# OS junk
 .DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-app-example
-
-# generated native folders
-/ios
-/android
+Thumbs.db
